--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-asgiref==3.9.1
-certifi==2024.2.2
-distlib==0.3.8
-Django==5.2.4
-filelock==3.13.3
-packaging==25.0
-pipenv==2025.0.4
-platformdirs==4.2.0
-setuptools==69.2.0
+asgiref==3.10.0
+Django==5.2.7
+mysqlclient==2.2.7
 sqlparse==0.5.3
-virtualenv==20.25.1
